2010-05-03  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43972
	* config/i386/i386.c (ix86_delegitimize_address): Make sure the
	result mode matches original rtl mode.

2010-05-02  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_target_string): Output 'flags', not 'isa',
	when processing flag options.

2010-05-02  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-04-29  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/43921
	* config/i386/i386.c (get_some_local_dynamic_name): Replace
	INSN_P with NONDEBUG_INSN_P.
	(distance_non_agu_define): Likewise.
	(distance_agu_use): Likewise.

2010-04-30  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-ssa-loop-ivopts.c (may_be_unaligned_p): Check the alignment of
	the variable part of the offset as well.  Use highest_pow2_factor for
	all alignment checks.

2010-04-30  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43942
	* tree.c (auto_var_in_fn_p): Return false for DECL_EXTERNAL vars.

2010-04-28  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/elf.h (ASM_DECLARE_OBJECT_NAME): Use gnu_unique_object
	type if available.

2010-04-28  Eric Botcazou  <ebotcazou@adacore.com>

	* lto-streamer-in.c (unpack_ts_type_value_fields): Replace test for
	record or union type with RECORD_OR_UNION_TYPE_P predicate.
	(lto_input_ts_type_tree_pointers): Likewise.
	* lto-streamer-out.c (pack_ts_type_value_fields): Likewise.
	(lto_output_ts_type_tree_pointers): Likewise.

2010-04-28  Eric Botcazou  <ebotcazou@adacore.com>

	* lto-streamer.c [LTO_STREAMER_DEBUG] (tree_htab, tree_hash_entry,
	hash_tree, eq_tree): New tree hash table.
	(lto_streamer_init) [LTO_STREAMER_DEBUG]: Initialize it.
	[LTO_STREAMER_DEBUG] (lto_orig_address_map, lto_orig_address_get,
	lto_orig_address_remove): Reimplement.

2010-04-28  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR target/22224
	* config/alpha/osf.h (ASM_OUTPUT_LOCAL): Redefine.

2010-04-28  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/43846