@@ -3,6 +3,14 @@
 	Backport from mainline
 	2010-05-04  H.J. Lu  <hongjiu.lu@intel.com>
 
+	PR middle-end/43671
+	* gcc.target/i386/pr43671.c: New.
+
+2010-05-04  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from mainline
+	2010-05-04  H.J. Lu  <hongjiu.lu@intel.com>
+
 	PR debug/43508
 	* gcc.target/i386/pr43508.c: New.
 
